# common-embedded-platform

./: CMakeLists.txt  LICENSE  README.md  boilerplate.cmake
boilerplate/: CMakeLists.txt  README.md
boilerplate/h735/: CMakeLists.txt  README.md  StandardBSP.cpp  StandardBSP.h
boilerplate/h750/: CMakeLists.txt  README.md  StandardBSP.cpp  StandardBSP.h
bootloader/: BootApp.S  BootloaderAPI.h  CMakeLists.txt  bootloader-common.h  bootloader.cpp
cli/: CMakeLists.txt  CommonCommands.cpp  CommonCommands.h  README.md
core/: CMakeLists.txt  LogFlushTask.h  MulticoreStartup.S  SPITask.h  Task.h  TimerTask.cpp  TimerTask.h  bsp.h  hardware-id.cpp  main.cpp  platform.h
drivers/: CMakeLists.txt  TCA6424A.cpp  TCA6424A.h  VSC8512.cpp  VSC8512.h
fpga/: AcceleratedCryptoEngine.cpp  AcceleratedCryptoEngine.h  CMakeLists.txt  DeviceID.cpp  Ethernet.cpp  Ethernet.h  FMCUtils.cpp  FMCUtils.h  FPGAFirmwareUpdater.cpp  FPGAFirmwareUpdater.h
multicore/: CMakeLists.txt  IPCDescriptorTable.cpp  IPCDescriptorTable.h  MulticoreLogDevice.cpp  MulticoreLogDevice.h
postbuild/: stm32h735.sh  stm32l031.sh  stm32mp257-cpu1.sh  stm32mp257-cpu2.sh
services/: CMakeLists.txt  Iperf3Server.cpp  Iperf3Server.h  STM32NTPClient.cpp  STM32NTPClient.h
supervisor/: CMakeLists.txt  IBCRegisterReader.cpp  IBCRegisterReader.h  PowerResetSupervisor.cpp  PowerResetSupervisor.h  README.md  RailDescriptor.h  ResetDescriptor.h  SupervisorSPIRegisters.h  SupervisorSPIServer.cpp  SupervisorSPIServer.h  TempSensorReader.cpp  TempSensorReader.h  supervisor-bsp.cpp  supervisor-common.h  supervisor.cpp
tcpip/: CMakeLists.txt  CommonTCPIP.cpp  CommonTCPIP.h  IPAgingTask.cpp  IPAgingTask.h  IPAgingTask10Hz.cpp  IPAgingTask10Hz.h  IPAgingTask1Hz.cpp  IPAgingTask1Hz.h  KeyManagerPubkeyAuthenticator.cpp  KeyManagerPubkeyAuthenticator.h  PhyPollTask.cpp  PhyPollTask.h  README.md  SSHKeyManager.cpp  SSHKeyManager.h
